@@ -4,8 +4,6 @@ import com.gregtechceu.gtceu.api.capability.recipe.ItemRecipeCapability;
 import com.gregtechceu.gtceu.api.gui.widget.EnumSelectorWidget;
 import com.gregtechceu.gtceu.api.recipe.GTRecipeType;
 import com.gregtechceu.gtceu.api.recipe.content.Content;
-import com.gregtechceu.gtceu.api.recipe.lookup.GTRecipeLookup;
-import com.gregtechceu.gtceu.api.recipe.lookup.ingredient.MapIngredientTypeManager;
 import com.gregtechceu.gtceu.data.item.GTDataComponents;
 import com.gregtechceu.gtceu.data.recipe.GTRecipeTypes;
 import com.gregtechceu.gtceu.utils.ItemStackHashStrategy;
@@ -20,7 +18,7 @@ import net.minecraft.world.item.ItemStack;
 import com.mojang.serialization.Codec;
 import it.unimi.dsi.fastutil.objects.Object2IntOpenCustomHashMap;
 
-import java.util.List;
+import java.util.Collections;
 import java.util.function.Consumer;
 
 public class SmartItemFilter implements ItemFilter {
@@ -75,10 +73,11 @@ public class SmartItemFilter implements ItemFilter {
 
     private int lookup(ItemStack itemStack) {
         ItemStack copy = itemStack.copyWithCount(Integer.MAX_VALUE);
-        var ingredients = MapIngredientTypeManager.getFrom(copy, ItemRecipeCapability.CAP);
-        var recipe = filterMode.lookup.recurseIngredientTreeFindRecipe(List.of(ingredients),
-                filterMode.lookup.getLookup(), r -> true);
-        if (recipe == null) return 0;
+        var recipe = filterMode.recipeType.db()
+                .find(Collections.singletonMap(ItemRecipeCapability.CAP, Collections.singletonList(copy)), r -> true);
+        if (recipe == null) {
+            return 0;
+        }
         for (Content content : recipe.getInputContents(ItemRecipeCapability.CAP)) {
             var stacks = ItemRecipeCapability.CAP.of(content.getContent()).getItems();
             for (var stack : stacks) {
@@ -105,15 +104,14 @@ public class SmartItemFilter implements ItemFilter {
 
         public static final Codec<SmartFilteringMode> CODEC = StringRepresentable.fromEnum(SmartFilteringMode::values);
         private static final SmartFilteringMode[] VALUES = values();
-
         private final String name;
-        private final GTRecipeLookup lookup;
+        private final GTRecipeType recipeType;
         private final Object2IntOpenCustomHashMap<ItemStack> cache = new Object2IntOpenCustomHashMap<>(
                 ItemStackHashStrategy.comparingAllButCount());
 
         SmartFilteringMode(String name, GTRecipeType type) {
             this.name = name;
-            this.lookup = type.getLookup();
+            this.recipeType = type;
         }
 
         @Override
